--- a/bin/lab/oxgame/Main.fxml
+++ b/bin/lab/oxgame/Main.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -13,7 +14,10 @@
    <top>
       <HBox BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="onActionBtnReset" mnemonicParsing="false" onAction="#onActionBtnReset" text="Reset" />
+            <Button fx:id="onActionBtnReset" mnemonicParsing="false" onAction="#onActionBtnReset" prefHeight="25.0" prefWidth="84.0" text="Reset" />
+            <TextField fx:id="graczo" />
+            <TextField fx:id="graczx" prefHeight="25.0" prefWidth="126.0" />
+            <Button fx:id="onActionBtnWprowadz" mnemonicParsing="false" onAction="#onActionBtnWprowadz" prefHeight="25.0" prefWidth="123.0" text="wprowadź graczy" />
          </children>
       </HBox>
    </top>
